--- a/BrowserFile/BrowserFile/Views/Shared/_Layout.cshtml
+++ b/BrowserFile/BrowserFile/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
 <body>
     <header
         <nav class="navbar navbar-expand-lg">
-            <div class="container-fluid">
+            <div class="container-fluid" >
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarExample" aria-controls="navbarExample" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -32,6 +32,9 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="File" asp-action="File">File</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Folder" asp-action="Index">Folder</a>
                             </li>
                         }
                     </ul>
