--- a/BrowserFile/BrowserFile/Views/Folder/Index.cshtml
+++ b/BrowserFile/BrowserFile/Views/Folder/Index.cshtml
@@ -1,6 +1,8 @@
 ﻿@model BrowserFile.Models.ViewModels.FolderViewModel;
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.js"></script>
+
 <ul class="nav nav-pills pt-2">
     <li class="nav-item">
         <a class="nav-link active" data-bs-toggle="pill" href="#mainPage">Main page</a>
@@ -21,7 +23,39 @@
 <div class="tab-content mt-3">
     <div class="tab-pane fade show active" id="mainPage">
         <h3>Main page content</h3>
-        <p>Tu jest główna strona.</p>
+        @if (Model.Folders.Any())
+        {
+            <div class="row">
+                @foreach (var folder in Model.Folders)
+                {
+                    <div class="col-md-4 mb-3">
+                        <div class="card h-100">
+                            <div class="card-body">
+                                <div class="d-flex align-items-center mb-2">
+                                    @if (folder.Icon != null)
+                                    {
+                                        <div class="pe-2">
+                                            @Html.Raw(System.IO.File.ReadAllText("wwwroot" + @folder.Icon.Url))
+                                        </div>
+                                    }
+                                    <h5 class="card-title mb-0">@folder.Name</h5>
+                                </div>
+                                <p class="card-text">@folder.Description</p>
+                                <small class="text-muted">Tag: @folder.Tag</small><br />
+                                <small class="text-muted">Created: @folder.CreatedAt.ToString("dd/MM/yyyy")</small>
+                                <div class="mt-2">
+                                    <a asp-controller="File" asp-action="Index" asp-route-id="@folder.Id" class="btn btn-primary btn-sm">Open folder</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                }
+            </div> 
+        }
+        else
+        {
+            <p>Nie masz żadnych folderów do wyświetlenia.</p>
+        }
     </div>
 
     <div class="tab-pane fade w-50" id="createFolder">
