--- a/BrowserFile/BrowserFile/Views/File/Index.cshtml
+++ b/BrowserFile/BrowserFile/Views/File/Index.cshtml
@@ -377,8 +377,10 @@
                     <div class="mb-3">
                         <label class="form-label">Select destination folder:</label>
                         <select name="newFolderId" class="form-select" required>
-                            <option value="">Choose folder...</option>
-                            <!-- You'll need to pass available folders from controller -->
+                            @foreach (var folder in Model.FolderShortModel)
+                            {
+                                <option value="@folder.Id">@folder.Name</option>
+                            }
                         </select>
                     </div>
                 </div>
