--- a/BrowserFile/BrowserFile/Views/File/Index.cshtml
+++ b/BrowserFile/BrowserFile/Views/File/Index.cshtml
@@ -30,9 +30,6 @@
             <button class="btn btn-sm btn-outline-primary me-2" onclick="showBulkMoveModal()">
                 <i class="fas fa-arrows-alt"></i> Move Selected
             </button>
-            <button class="btn btn-sm btn-outline-danger me-2" onclick="bulkMoveToTrash()">
-                <i class="fas fa-trash"></i> Move to Trash
-            </button>
             <button class="btn btn-sm btn-outline-danger" onclick="bulkDeleteFiles()">
                 <i class="fas fa-times"></i> Delete Selected
             </button>
@@ -121,13 +118,16 @@
                             </div>
                             <div class="card-footer p-2 bg-light">
                                 <div class="btn-group w-100" role="group">
-                                    <a asp-controller="File" asp-action="Preview" asp-route-id="@file.Id"
-                                       class="btn btn-outline-primary btn-sm">
-                                        <i class="fas fa-eye"></i> Podgląd
-                                    </a>
+                                    @if(file.FileExtension == ".pdf" || file.FileExtension == ".jpg" || file.FileExtension == ".jpeg" || file.FileExtension == ".png" || file.FileExtension == ".gif")
+                                    {
+                                        <a asp-controller="File" asp-action="Preview" asp-route-id="@file.Id"
+                                           class="btn btn-outline-primary btn-sm">
+                                            <i class="fas fa-eye"></i> View
+                                        </a>
+                                    }
                                     <a asp-action="DownloadFile" asp-route-id="@file.Id"
                                        class="btn btn-outline-success btn-sm">
-                                        <i class="fas fa-download"></i> Pobierz
+                                        <i class="fas fa-download"></i> Download
                                     </a>
                                 </div>
                             </div>
@@ -148,7 +148,7 @@
 
     <div class="tab-pane fade w-50" id="uploadFile">
         <h3>Upload file</h3>
-        <form asp-action="CreateFolder" method="post" enctype="multipart/form-data">
+        <form asp-action="UploadFile" method="post" enctype="multipart/form-data">
             <input type="hidden" asp-for="CurrentFolderId" />
 
             <div class="mb-3">
